<resources>
    <string name="app_name">WithPresso</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="kakao_talk">Kakao talk</string>
    <string name="sign_up">회원가입</string>
    <string name="cafe_recommend">카페 추천</string>
    <string name="cafe_name">CAFE NAME</string>
    <string name="cafe_basic_info">카페 기본 정보</string>
    <string name="oper_time_index">운영시간</string>
    <string name="oper_time_info">10:00 - 22:00</string>
    <string name="log_in">로그인</string>
    <string name="log_in_or_my_page">log_in_or_my_page</string>
    <string name="my_page_nickname">MELAN</string>
    <string name="coupon">쿠폰함</string>
    <string name="change">CHANGE</string>
    <string name="survey">설문 조사</string>
    <string name="coupon_discount_info">melancholic_1\n$1 discount coupon</string>
    <string name="re_confirm_password">비밀번호 재확인</string>
    <string name="confirm">CONFIRM</string>
    <string name="nickname">닉네임</string>
    <string name="sign_up_title">회원가입</string>
    <string name="my_page">내 정보</string>
    <string name="review">리뷰</string>
    <string name="logout">로그아웃</string>
    <string name="cafe_cleanliness">매장은 깨끗했나요?</string>
    <string name="submit">제출하기</string>
    <string name="phone_number_except">\'-\'를 제외한 전화번호</string>
    <string name="wide_table">책상이 넓은 카페</string>
    <string name="survey_phrase">어떤 카페에서 공부가 잘 되시나요?\n아래 항목 중 3가지를 골라주세요.</string>
    <string name="restroom_cleanliness">화장실은 깨끗했나요?</string>

    <!--kakao talk key-->
    <string name="kakao_app_key">0fcf5557f3dcc4f19eb41a167e17560e</string>
    <string name="dup_check">중복 확인</string>
    <string name="quiet_atmosphere">조용한 카페</string>
    <string name="smoking_room">흡연실이 있는 카페</string>
    <string name="many_plug">콘센트가 충분한 카페</string>
    <string name="cleanliness">청결한 카페</string>
    <string name="enter_auth_code">인증 코드를 입력해주세요</string>
    <string name="enter_phone_num">\'-\' 를 제외한 전화번호를 입력해주세요</string>
    <string name="very_dirty">너무 더러워요</string>
    <string name="dirty">조금 더러워요</string>
    <string name="soso">그냥 그래요</string>
    <string name="clean">깨끗해요</string>
    <string name="very_clean">엄청 깨끗해요</string>
    <string name="quiet_atmo">분위기는 조용했나요?</string>
    <string name="very_noisy">시끄러워요</string>
    <string name="noisy">조금 시끄러워요</string>
    <string name="proper">적당해요</string>
    <string name="quiet">조용해요</string>
    <string name="very_quiet">엄청 조용해요</string>
    <string name="study_well">공부는 잘 됐나요?</string>
    <string name="really_bad">너무 안 됐어요</string>
    <string name="bad">안 됐어요</string>
    <string name="study_soso">그냥 그랬어요</string>
    <string name="study_good">잘 됐어요</string>
    <string name="study_really_good">엄청 잘 됐어요</string>
    <string name="comment">의견을 남겨주세요 :)</string>
    <string name="comment_verbose">의견을 남겨주세요</string>
    <string name="review_comment">리뷰 내용</string>
    <string name="review_point">리뷰 점수:</string>
    <string name="total_num_of_review">전체 리뷰 개수:</string>
    <string name="id">아이디</string>
</resources>