<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/survey_back_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:padding="0dp"
            android:src="@drawable/back_arrow"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical|left" />

        <TextView
            android:id="@+id/survey_title_text"
            style="@style/sign_in_title_style"
            android:text="@string/survey" />

    </FrameLayout>

    <TextView
        android:id="@+id/survey_phrase_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        android:text="@string/survey_phrase"
        android:textSize="25sp"
        android:textStyle="italic"
        android:fontFamily="@font/basic"
        android:gravity="center_horizontal"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/survey_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <LinearLayout
            android:id="@+id/survey_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/survey_table_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"/>

                <TextView
                    android:id="@+id/survey_table_text"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/basic"
                    android:padding="4dp"
                    android:text="@string/wide_table"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/survey_atmo_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"/>

                <TextView
                    android:id="@+id/survey_atmo_text"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/basic"
                    android:padding="4dp"
                    android:text="@string/quiet_atmosphere"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/survey_light_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"/>

                <TextView
                    android:id="@+id/survey_light_text"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/basic"
                    android:padding="4dp"
                    android:text="@string/smoking_room"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/survey_plug_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"/>

                <TextView
                    android:id="@+id/survey_plug_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/basic"
                    android:padding="4dp"
                    android:text="@string/many_plug"
                    android:textSize="16sp"
                    android:textStyle="italic" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/survey_restroom_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"/>

                <TextView
                    android:id="@+id/survey_restroom_text"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/basic"
                    android:padding="4dp"
                    android:text="@string/cleanliness"
                    android:textSize="16sp"
                    android:textStyle="italic" />


            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/survey_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/submit"
        android:textSize="16sp"
        android:fontFamily="@font/basic"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>
