<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_page_whole_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".MyPageActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/my_page_back_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:padding="0dp"
            android:src="@drawable/back_arrow"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical|left" />

        <TextView
            android:id="@+id/my_page_title_text"
            style="@style/sign_in_title_style"
            android:text="@string/my_page" />

    </FrameLayout>

    <ImageView
        android:id="@+id/my_page_profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_profile" />

    <TextView
        android:id="@+id/my_page_nickname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/basic"
        android:padding="4dp"
        android:text="@string/my_page_nickname"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="20">

            <TextView
                android:id="@+id/my_page_email_index"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_marginStart="6dp"
                android:layout_weight="4"
                android:fontFamily="@font/basic"
                android:padding="4dp"
                android:text="@string/id"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/my_page_email_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_weight="16"
                android:fontFamily="@font/basic"
                android:padding="4dp"
                android:text="USER EMAIL"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/my_page_coupon_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/my_page_coupon_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/coupon" />

            <TextView
                android:id="@+id/my_page_coupon_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/basic"
                android:padding="4dp"
                android:paddingEnd="20dp"
                android:text="@string/coupon"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/my_page_survey_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/my_page_survey_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/survey" />

            <TextView
                android:id="@+id/my_page_survey_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/basic"
                android:padding="4dp"
                android:paddingEnd="20dp"
                android:text="@string/survey"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:id="@+id/my_page_logout_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/my_page_logout_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logout" />

            <TextView
                android:id="@+id/my_page_logout_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/basic"
                android:padding="4dp"
                android:paddingEnd="20dp"
                android:text="@string/logout"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
